--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "italy = None # 'Italy'\n",
+    "italy = No # 'Italy'\n",
     "italy"
    ]
   },
