--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "italy = countries[-3] # 'Italy'\n",
+    "italy = None # 'Italy'\n",
     "italy"
    ]
   },
