--- a/index.ipynb
+++ b/index.ipynb
@@ -190,13 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "italy # 'Italy'"
+    "italy = countries[-3] # 'Italy'"
    ]
   },
   {
