--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = countries[-3] # 'Italy'"
+    "italy = countries[-3] # 'Italy'\n",
+    "ita"
    ]
   },
   {
