--- a/index.ipynb
+++ b/index.ipynb
@@ -190,12 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Italy'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "italy = countries[-3] # 'Italy'\n",
-    "ita"
+    "italy"
    ]
   },
   {
