--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "kindof_neighbors = co\n",
+    "kindof_neighbors = countries[2:]\n",
     "kindof_neighbors"
    ]
   },
