--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    },
    "outputs": [],
    "source": [
-    "count # add code here"
+    "countries.append('Mal') # add code here"
    ]
   },
   {
