--- a/index.ipynb
+++ b/index.ipynb
@@ -282,12 +282,10 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Mal') # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
