--- a/index.ipynb
+++ b/index.ipynb
@@ -303,7 +303,7 @@
    },
    "outputs": [],
    "source": [
-    "countries.append('Malta') # add code here"
+    "countries.append('Thailand') # add code here"
    ]
   },
   {
