--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,7 @@
    },
    "outputs": [],
    "source": [
-    "countrie # add code here"
+    "countries[6] = '' # add code here"
    ]
   },
   {
