automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries = list()"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
